<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/item_background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/edit_movie"
            android:src="@drawable/edit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="40dp"/>

        <ImageView
            android:id="@+id/delete_movie"
            android:src="@drawable/trash"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="40dp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- YEAR -->
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/list_year"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/empty"/>
        </TableRow>

        <!-- RATED -->
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rated"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/list_rated"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/empty"/>
        </TableRow>

        <!-- RELEASED -->
        <!-- Add padding to the longest text, it applies to all -->
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="@string/released"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/list_released"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/empty"/>
        </TableRow>

        <!-- RUNTIME -->
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/runtime"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/list_runtime"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/empty"/>
        </TableRow>

        <!-- GENRE -->
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/list_genre"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/empty"/>
        </TableRow>

        <!-- ACTORS -->
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actors"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/list_actors"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/empty"/>
        </TableRow>

        <!-- PLOT -->
        <TableRow
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/list_plot"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/empty"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
