<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.asu.bscs.tkbrocke.lab_3.NewEntryActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <!-- JSON -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/json"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/json"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:textColor="@color/default_text_color"
                    android:inputType="text"
                    android:scrollbars="vertical" />
            </TableRow>

            <TableRow
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="25sp"
                    android:textColor="@color/default_text_color"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </TableRow>

            <!-- TITLE -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/title"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/default_text_color"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"/>
            </TableRow>

            <!-- YEAR -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/year"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/default_text_color"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </TableRow>

            <!-- RATED -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rated"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/rated"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/default_text_color"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"/>
            </TableRow>

            <!-- RELEASED -->
            <!-- Add padding to the longest text, it applies to all -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="40dp"
                    android:text="@string/released"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/released"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/default_text_color"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </TableRow>

            <!-- RUNTIME -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/runtime"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/default_text_color"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"/>
            </TableRow>

            <!-- GENRE -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/genre"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/default_text_color"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </TableRow>

            <!-- ACTORS -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actors"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/actors"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/default_text_color"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </TableRow>

            <!-- PLOT -->
            <TableRow
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot"
                    android:textColor="@color/default_text_color"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/plot"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/default_text_color"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:scrollbars="vertical" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
